--- a/ProyectoWeb1/styles/stylesEliminarUsuario.css
+++ b/ProyectoWeb1/styles/stylesEliminarUsuario.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #0032A0;
+    background-color: #274394;
     color: #333;
     display: flex;
     justify-content: center;
@@ -44,7 +44,7 @@ form input {
 form button {
     width: 100%;
     padding: 10px 15px;
-    background-color: #EDFF44;
+    background-color: #ff6f00;
     font-weight: bold;
     color: #0032A0;
     border: none;
@@ -55,13 +55,13 @@ form button {
 }
 
 form button:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
 }
 
 /* Link Styles */
 .btn-back {
     display: inline-block;
-    background-color: #EDFF44;
+    background-color: #ff6f00;
     margin-top: 15px;
     padding: 10px 20px;
     color: #0032A0;
@@ -72,5 +72,5 @@ form button:hover {
 }
 
 .btn-back:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
 }
