--- a/ProyectoWeb1/styles/stylesEnviarRegistroLogin.css
+++ b/ProyectoWeb1/styles/stylesEnviarRegistroLogin.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #0032A0;
+    background-color: #274394;
     color: #333;
     margin: 0;
     padding: 0;
@@ -31,7 +31,7 @@ a {
     display: inline-block;
     margin: 15px 10px; /* Incrementa el espacio vertical entre botones */
     padding: 12px 20px;
-    background-color: #EDFF44;
+    background-color: #ff6f00;
     color: #0032A0;
     font-weight: bold;
     text-decoration: none;
@@ -41,7 +41,7 @@ a {
 }
 
 a:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
     transform: translateY(-2px); /* Efecto de elevación */
 }
 
