--- a/ProyectoWeb1/styles/stylesIndex.css
+++ b/ProyectoWeb1/styles/stylesIndex.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background: #0032A0;
+    background: #274394;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,8 +66,8 @@ button {
     font-size: 15px;
     gap: 15px;
     font-family: "Poppins";
-    background-color: #EDFF44;
-    color: #0032A0;
+    background-color: #ff6f00;
+    color: #274394;
     font-weight: bold;
     border: none;
     border-radius: 8px;
@@ -76,5 +76,5 @@ button {
 }
 
 button:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
 }
