--- a/ProyectoWeb1/styles/stylesRegistro.css
+++ b/ProyectoWeb1/styles/stylesRegistro.css
@@ -13,7 +13,7 @@ body {
 /* Header */
 .header {
     background-color: #0032A0;
-    color: #EDFF44;
+    color: #ff6f00;
     padding: 15px;
     width: 100%;
     text-align: center;
