--- a/ProyectoWeb1/styles/stylesRegistroLogin.css
+++ b/ProyectoWeb1/styles/stylesRegistroLogin.css
@@ -13,7 +13,7 @@ body {
 /* Header */
 .header {
     background-color: #0032A0;
-    color: #EDFF44;
+    color: #ff6f00;
     padding: 15px;
     width: 100%;
     text-align: center;
@@ -41,7 +41,7 @@ h2 {
 
 hr {
     border: 0;
-    border-top: 4px solid #EDFF44;
+    border-top: 4px solid #ff6f00;
     margin-bottom: 20px;
 }
 
@@ -77,7 +77,7 @@ input[type="password"]:focus {
 button {
     width: 100%;
     padding: 10px 15px;
-    background-color: #EDFF44;
+    background-color: #ff6f00;
     color: #0032A0;
     border: none;
     border-radius: 4px;
@@ -88,7 +88,7 @@ button {
 }
 
 button:hover {
-    background-color: #d1e046;
+    background-color: #ff6f00;
 }
 
 /* Links */
