--- a/ProyectoWeb1/styles/stylesEliminarUsuario.css
+++ b/ProyectoWeb1/styles/stylesEliminarUsuario.css
@@ -46,7 +46,7 @@ form button {
     padding: 10px 15px;
     background-color: #ff6f00;
     font-weight: bold;
-    color: #0032A0;
+    color: #ffffff;
     border: none;
     border-radius: 5px;
     font-size: 16px;
@@ -64,7 +64,7 @@ form button:hover {
     background-color: #ff6f00;
     margin-top: 15px;
     padding: 10px 20px;
-    color: #0032A0;
+    color: #ffffff;
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
