--- a/ProyectoWeb1/styles/stylesEnviarRegistro.css
+++ b/ProyectoWeb1/styles/stylesEnviarRegistro.css
@@ -32,7 +32,7 @@ a {
     margin: 15px 10px; /* Incrementa el espacio vertical entre botones */
     padding: 12px 20px;
     background-color: #ff6f00;
-    color: #0032A0;
+    color: #ffffff;
     font-weight: bold;
     text-decoration: none;
     border-radius: 6px;
