--- a/ProyectoWeb1/styles/stylesIndex.css
+++ b/ProyectoWeb1/styles/stylesIndex.css
@@ -1,4 +1,5 @@
-@import url(https://db.onlinewebfonts.com/c/67821e7ef9a2952d6e7757a6cae5a826?family=Novecento+WideBold);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -67,7 +68,7 @@ button {
     gap: 15px;
     font-family: "Poppins";
     background-color: #ff6f00;
-    color: #274394;
+    color: #ffffff;
     font-weight: bold;
     border: none;
     border-radius: 8px;
