--- a/ProyectoWeb1/styles/stylesPrincipal.css
+++ b/ProyectoWeb1/styles/stylesPrincipal.css
@@ -28,7 +28,7 @@ body {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #d9534f;
+    background-color: #ff6f00;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -71,8 +71,8 @@ body {
 }
 
 .tabla-estilos th {
-    background-color: #0032A0;
-    color: #EDFF44;
+    background-color: #ff6f00;
+    color: #ffffff;
     text-transform: uppercase;
     font-size: 14px;
 }
@@ -102,8 +102,8 @@ body {
     display: inline-block;
     margin: 5px;
     padding: 10px 20px;
-    background-color: #EDFF44;
-    color: #0032A0;
+    background-color: #ff6f00;
+    color: #ffffff;
     font-weight: bold;
     text-decoration: none;
     border-radius: 5px;
@@ -111,12 +111,12 @@ body {
 }
 
 .check {
-    background-color: #EDFF44;
-    color: #0032A0;
+    background-color: #ff6f00;
+    color: #ffffff;
     font-weight: bold;
     margin-bottom: 2rem;
 }
 
 .btn:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
 }
