--- a/ProyectoWeb1/styles/stylesactualizarLibro.css
+++ b/ProyectoWeb1/styles/stylesactualizarLibro.css
@@ -13,8 +13,8 @@ body {
 }
 /* Header */
 .header {
-    background-color: #0032A0;
-    color: #EDFF44;
+    background-color: #274394;
+    color: #ffffff;
     padding: 15px;
     width: 100%;
     text-align: center;
@@ -39,7 +39,7 @@ h2 {
 }
 hr {
     border: 0;
-    border-top: 4px solid #EDFF44;
+    border-top: 4px solid #ff6f00;
     margin-bottom: 20px;
 }
 /* Form Group */
@@ -71,8 +71,8 @@ button,
 input[type="submit"] {
     width: 100%;
     padding: 10px 15px;
-    background-color: #EDFF44;
-    color: #0032A0;
+    background-color: #ff6f00;
+    color: #ffffff;
     border: none;
     border-radius: 4px;
     font-size: 1rem;
@@ -82,7 +82,7 @@ input[type="submit"] {
 }
 button:hover,
 input[type="submit"]:hover {
-    background-color: #d1e046;
+    background-color: #e65c00;
 }
 /* Links */
 .links {
@@ -112,12 +112,12 @@ input[type="submit"] {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-    background-color: #4CAF50;
+    background-color: #ff6f00;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #e65c00;
 }
