--- a/ProyectoWeb1/styles/stylesPrincipal.css
+++ b/ProyectoWeb1/styles/stylesPrincipal.css
@@ -54,6 +54,44 @@ body {
     font-weight: bold;
 }
 
+.label-busqueda {
+    font-size: 1.2rem;
+    color: #333;
+    margin-right: 10px;
+    font-family: 'Poppins';
+  }
+
+  .input-busqueda {
+    padding: 10px;
+    font-size: 1rem;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    width: 250px;
+    margin-right: 10px;
+    transition: border-color 0.3s ease;
+  }
+
+  .input-busqueda:focus {
+    border-color: #ff6f00; /* Naranja */
+    outline: none;
+  }
+
+  .btn-busqueda {
+    padding: 10px 20px;
+    background-color: #ff6f00; /* Naranja */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-busqueda:hover {
+    background-color: #e65c00; /* Naranja más oscuro */
+  }
+
+
 /* Table Styles */
 .tabla-estilos {
     width: 100%;
